plugins/Public/OpenJourneyServer_OSRM/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osrm-service
spec:
  selector:
    app: osrm
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
