plugins/Public/OpenJourneyServer_OSRM/kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: osrm-network-policy
spec:
  podSelector:
    matchLabels:
      app: osrm
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
      ports:
        - protocol: TCP
          port: 5000
